--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
     "angular-ui-router": "~0.2.15",
     "angular-resource": "~1.4.1",
     "angular-animate": "~1.4.1"
+  },
+  "devDependencies": {
+    "script.js": "~2.5.7"
   }
 }
